--- a/game/aaclone/views/main.erb
+++ b/game/aaclone/views/main.erb
@@ -1,11 +1,21 @@
 <span id="loading">Loading...</span>
 <a id="start" href="#">Start</a>
 <div id='outline'>
-  <div id='img1'></div>
-  <div id='img2'></div>
-  <div id='textbox'>
-    <textarea id='dialoguebox'></textarea>
+  <h1>PROTOASHA WRIGHT: THE TRIAL OF THE </h1>
+  <div id='img1'><!-- This has to be an empty space--></div>
+  <div id='img2'><!-- This has to be an empty space--></div>
+  <div id='accordion'>
+    <h2>Evidence</h2>
+    <div>First Evidence content panel</div>
   </div>
-  <div id='eviList'></div>
-  <div id='btns'></div>
+  <h3 id='name'>Test</h3>
+  <div id='textbox'>
+    <!-- Cause the first line of dialogue to have a specific font-->
+    <textarea id='dialoguebox' readonly=true></textarea>
+  </div>
+  <div id='btns'>
+    <!-- Next, Back, Press, Present, and Check -->
+    <button id="next_btn">Next</button>
+    <button id="back_btn">Back</button>
+  </div>
 </div>
