--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
 <%= yield %>
 </body>
 <script>
-    $('#accordion').accordion({active: });
+    $('#accordion').accordion({active: 0});
 
     $('#img2').offset(
             { top:$('#img1').offset().top, left: $('#img1').offset().left + $('#img1').width()}
