--- a/views/main.erb
+++ b/views/main.erb
@@ -1,14 +1,14 @@
 <span id="loading">Loading...</span>
 <a id="start" href="#">Start</a>
 <div id='outline'>
-  <h1>PROTOASHA WRIGHT: THE TRIAL OF THE </h1>
+  <h1 id='title'>PROTOASHA WRIGHT: THE TRIAL OF "THE DEWBADER" </h1>
   <div id='img1'><!-- This has to be an empty space--></div>
   <div id='img2'><!-- This has to be an empty space--></div>
   <div id='accordion'>
     <h2>Evidence</h2>
-    <div>First Evidence content panel</div>
+    <div>N/A</div>
   </div>
-  <h3 id='name'>Test</h3>
+  <!-- <h3 id='name'>Test</h3> -->
   <div id='textbox'>
     <!-- Cause the first line of dialogue to have a specific font-->
     <textarea id='dialoguebox' readonly=true></textarea>
